// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Metadata component correctly 1`] = `
<ul
  className="css-ups4zc e17yjacc0"
>
  <li
    className="css-5dmri2 e17yjacc1"
  >
    分類：
    <ul
      className="css-6n7j50 e17yjacc2"
    >
      <li
        className="css-18jglst e17yjacc3"
      >
        <a
          className="css-n1a5ie ecv7yzj0"
          href="/articles/category/slug"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          name
        </a>
      </li>
      <li
        className="css-18jglst e17yjacc3"
      >
        <a
          className="css-n1a5ie ecv7yzj0"
          href="/articles/category/slug2"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          name2
        </a>
      </li>
    </ul>
  </li>
  <li
    className="css-5dmri2 e17yjacc1"
  >
    字數：
    <img
      alt="雞"
      className="css-8khlmj e17yjacc4"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="/img/chicken.png"
    />
     x 
    1
    <span
      className="css-s1m6x7 e17yjacc5"
    >
      雞數：計算文長的常見計量單位，一般而言數字大小與文章長度呈正相關
    </span>
  </li>
</ul>
`;

exports[`It should render Metadata component correctly when target article has been modified 1`] = `
<ul
  className="css-ups4zc e17yjacc0"
>
  <li
    className="css-5dmri2 e17yjacc1"
  >
    分類：
    <ul
      className="css-6n7j50 e17yjacc2"
    >
      <li
        className="css-18jglst e17yjacc3"
      >
        <a
          className="css-n1a5ie ecv7yzj0"
          href="/articles/category/slug"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          name
        </a>
      </li>
    </ul>
  </li>
  <li
    className="css-5dmri2 e17yjacc1"
  >
    字數：
    <img
      alt="雞"
      className="css-8khlmj e17yjacc4"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="/img/chicken.png"
    />
     x 
    1
    <span
      className="css-s1m6x7 e17yjacc5"
    >
      雞數：計算文長的常見計量單位，一般而言數字大小與文章長度呈正相關
    </span>
  </li>
</ul>
`;
